<resources>
    <string name="app_name">QuizDroid</string>
    <string name="select_a_topic">Select A Topic</string>
    <string name="lets_take_a_quiz">Let\'s Take A Quiz!</string>
    <string name="marvel_super_heroes">Marvel Super Heroes</string>
    <string name="math">Math</string>
    <string name="physics">Physics</string>
    <string name="topic_overview">Topic Overview</string>
    <string name="begin">Begin</string>
    <string name="question_1">Question 1</string>
    <string name="submit">Submit</string>
    <string name="packageName">edu.washington.minhsuan.quizdroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="mode">Mode</string>
    <string name="url">Url</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
</resources>
