<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:gravity="center" android:id="@+id/linearLayout">
        <TextView
                android:text="@string/lets_take_a_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtQuizTitle"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="30sp"
                android:textStyle="bold"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        <TextView
                android:text="@string/select_a_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTopics"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="23sp" tools:layout_editor_absoluteY="181dp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        <Button
                android:text="@string/math"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMath"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:layout_editor_absoluteY="200dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtMath"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:text="@string/math"
                tools:layout_editor_absoluteY="266dp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        <Button
                android:text="@string/physics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPhysics"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.458"
                tools:layout_editor_absoluteY="310dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPhys"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:text="@string/physics"
                tools:layout_editor_absoluteY="375dp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        <Button
                android:text="@string/marvel_super_heroes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMarvelHeroes"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:layout_editor_absoluteY="419dp"/>
        <TextView
                android:text="@string/marvel_super_heroes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtMarvel"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:text="@string/marvel_super_heroes"
                tools:layout_editor_absoluteY="484dp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        <EditText
                tools:text="@string/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUrl"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:layout_editor_absoluteY="504dp" android:hint="Enter URL"/>
        <EditText
                tools:text="@string/mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtMode"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:layout_editor_absoluteY="541dp" android:hint="Delay time (in minutes)"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSave"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>
            <Button
                    android:text="@string/stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnStop"
                    android:enabled="false"/>
            <Button
                    android:text="@string/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnClear"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>